# ogre-stream-ext

./: .gitignore  Cargo.toml  README.md
docs/: Essay on Rust Streams.odt  README  collecting_stream.dot  non_collecting_stream.dot
examples/book_example/: composite_1_bad_performance.rs  composite_2_sub_optimal_optimization.rs  composite_3_best_performance.rs  concatenating_1.rs  concatenating_2_bad_performance_over_the_network.rs  concatenating_3_optimal_performance_over_the_network.rs  main.rs
src/: finalization_callback_ext.rs  finalization_callbacks_ext.rs  lib.rs  rate_manager_ext.rs  timeout_ext.rs  try_count_ext.rs  try_enumerate_ext.rs
